...
          autoCorrect={false}
          onBlur={onBlur}
          placeholderTextColor={colors.BLUE}
          placeholder={placeholder}
          value={value}
          secureTextEntry={isPassword && isDisplayPassword}
          testID={'StyledCustomInputTest'}
        />
        {isPassword && (
          <StyledRightIconWrapper
            onPress={onEyeClick}
            testID={'StyledRightIconWrapperTest'}
          >
            <EyeIcon testID={'EyeIconTest'} />
          </StyledRightIconWrapper>
        )}
      </StyledDropShadow>
      <StyledErrorWrapper>
        <StyledErrorText testID={'StyledErrorTextTest'}>
          {error}
        </StyledErrorText>
      </StyledErrorWrapper>
    </StyledCustomInputContainer>
  );
}
...
