...
  const simpleButtonTitle = localUser === 'Guest' ? 'Sign in' : 'Sign out';
  const simpleButtonPress = () =>
    localUser === 'Guest' ? redirectToLogin() : onSignOut();

  return (
    <StyledAnimatedWrapper>
      <StyledHomeScreenContainer testID={'StyledHomeScreenContainerTestID'}>
        <StyledTopWrapper>
          <StyledHomeTextWrapper>
            <StyledUserText testID={'StyledUserTextTestID'}>
              {localUser}
            </StyledUserText>
            <SimpleButton
              onPress={simpleButtonPress}
              title={simpleButtonTitle}
              size={14}
              onPressTestID={'HomeRightButtonTestID'}
            />
          </StyledHomeTextWrapper>
          <StyledHomeText>Home</StyledHomeText>
        </StyledTopWrapper>
        <FlatList data={homeData} renderItem={renderItem} />
      </StyledHomeScreenContainer>
...
