import { View } from 'react-native';
import styled from 'styled-components/native';

export const StyledSplashContainer = styled(View).attrs({
  testID: 'SplashContainerTestID',
})`
  flex: 1;
`;
