export enum HomeStackScreenName {
  CALCULATOR = 'Calculator',
  CALENDAR = 'Calendar',
  NOTES_SCREEN = 'Notes',
  HOME = 'Home',
  TIMER = 'Timer',
  LOGIN_FROM_HOME = 'LOGIN_FROM_HOME',
}
export enum MainStackScreenName {
  Home = 'MainStackHome',
  Login = 'Login',
}
export enum NotesStackScreenName {
  NOTES = 'All Notes',
  CREATE_NOTE = 'Create Note',
}
